# TradeZeroWebAPI

./: .gitignore  setup.cfg
.github/workflows/: main.yaml
tradezeroapi/: __init__.py  enums.py  igos_webdriver.py  main.py  portfolio.py
