[metadata]
name = tradeapi
version = 0.1.0
description = TradeZero API using Selenium for TZ's ZeroFree platform interactions.
author = Jeremie Gauthier
author_email = gauthier.jeremie.1@gmail.com
url = git@github.com:jegauth/TradeAPI.git

[options]
packages = find:
install_requires =
    pytz
    pandas
    lxml
    webdriver-manager==4.0.1
    selenium==4.8.2
    termcolor

[options.packages.find]
exclude =
    tests*

