[metadata]
name = tradezerowebapi
version = 0.1.15
description = TradeZero Web API using Selenium for TZ ZeroFree platform interactions.
author = Yan Cou
url = git@github.com:yancoupro/TradeZeroWebAPI.git

[options]
packages = find:
install_requires =
    pytz
    pandas
    lxml
    webdriver-manager==4.0.2
    selenium==4.10
    termcolor

[options.packages.find]
exclude =
    tests*

